--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,10 +6,12 @@
 image: node:10.15.3
 
 pipelines:
-  default:
-    - step:
-        caches:
-          - node
-        script: # Modify the commands below to build your repository.
-          - npm install
-          - npm test
+   branches:
+      master:
+      - step:
+         deployment: production
+         caches:
+         - node
+         script:
+         - npm install -g firebase-tools
+         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive
