--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,4 +14,4 @@ pipelines:
          - node
          script:
          - npm install -g firebase-tools
-         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive
+         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive --public dist
