--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,5 @@ pipelines:
          - node
          script:
          - npm install -g firebase-tools
-         - ng build
+         - firebase init
          - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive --public dist
