--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,5 @@ pipelines:
          - node
          script:
          - npm install -g firebase-tools
-         - firebase init
-         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive --public dist
+         - firebase use LandingPage
+         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive 
