--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,6 @@ pipelines:
          - node
          script:
          - npm install -g firebase-tools
-         - firebase login
+         - firebase login --token=$FIREBASE_TOKEN
          - firebase init
          - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive 
