--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,5 @@ pipelines:
          caches:
          - node
          script:
-         - npm install -g firebase-tools
-         - firebase init
+         - npm install -g firebase-tools --save-dev
          - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive 
