--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,5 +13,5 @@ pipelines:
          caches:
          - node
          script:
-         - npm install -g firebase-tools --save-dev
+         - npm install -g firebase-tools --token=$FIREBASE_TOKEN
          - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive 
