bitbucket-pipelines.yml deploying to heroku.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,17 +1,24 @@
-# This is a sample build configuration for JavaScript.
-# Check our guides at https://confluence.atlassian.com/x/14UWN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: node:8.12.0
-
 pipelines:
-   branches:
-      master:
-      - step:
-         deployment: production
-         caches:
-         - node
-         script:
-         - npm install -g firebase-tools --token=$FIREBASE_TOKEN
-         - firebase deploy --token=$FIREBASE_TOKEN --project LandingPage --non-interactive 
+  default:
+    - step:
+        name: Build and test
+        image: maven:3
+        caches: 
+          - maven
+        script:
+          - mvn -B clean verify
+    - step:
+        name: Create artifact
+        script:
+          - tar czfv application.tgz pom.xml src/
+        artifacts:
+          - application.tgz
+    - step:
+        name: Deploy to production
+        deployment: production
+        script:
+          - pipe: atlassian/heroku-deploy:0.1.1
+            variables:
+              HEROKU_API_KEY: $HEROKU_API_KEY
+              HEROKU_APP_NAME: $HEROKU_APP_NAME
+              ZIP_FILE: "application.tgz"
