--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,24 +1,11 @@
+image: node:8.9.2
+clone:
+ depth: full
+
 pipelines:
   default:
     - step:
-        name: Build and test
-        image: maven:3
-        caches: 
-          - maven
-        script:
-          - mvn -B clean verify
-    - step:
-        name: Create artifact
-        script:
-          - tar czfv application.tgz pom.xml src/
-        artifacts:
-          - application.tgz
-    - step:
-        name: Deploy to production
+        name: Deploy REST API to Heroku
         deployment: production
-        script:
-          - pipe: atlassian/heroku-deploy:0.1.1
-            variables:
-              HEROKU_API_KEY: $HEROKU_API_KEY
-              HEROKU_APP_NAME: $HEROKU_APP_NAME
-              ZIP_FILE: "application.tgz"
+        script: 
+          - git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git 
