--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5"
+    "async": "2.0.1",
+    "flaverr": "1.1.1",
+    "machine": "^15.0.0",
+    "mongodb": "2.2.25",
+    "qs": "6.4.0
   },
   "devDependencies": {
     "@sailshq/eslint": "^4.19.3"
@@ -25,6 +30,9 @@
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo"
+     "test": "npm run lint && npm run custom-tests",
+    "docker": "docker-compose run adapter bash",
+    "docker-test": "docker-compose up --exit-code-from adapter && docker-compose down"
   },
   "main": "app.js",
   "repository": {
