--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5",
     "async": "2.0.1",
-    "mongodb": "2.2.25",
+    "mongodb": "2.2.25"
   },
   
   "devDependencies": {
