--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "test": "npm run lint && npm run custom-tests && npm install -g sails-mongo && echo 'Done.'",
+    "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
-     "test": "npm run lint && npm run custom-tests",
+     "test": "npm install -g sails-mongo",
     "docker": "docker-compose run adapter bash",
     "docker-test": "docker-compose up --exit-code-from adapter && docker-compose down"
   },
