--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
     "@sailshq/eslint": "^4.19.3"
   },
   "scripts": {
-    "start": "NODE_ENV=production node app.js",
+    "start": "NODE_ENV=production node app.js node server.js",
     "test": "npm run lint && npm run custom-tests && echo 'Done.'",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✔  Your .js files look good.'",
     "custom-tests": "echo \"(No other custom tests yet.)\" && echo",
-     "test": "npm install -g sails-mongo",
     "docker": "docker-compose run adapter bash",
     "docker-test": "docker-compose up --exit-code-from adapter && docker-compose down"
   },
