--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "author": "maxlion",
   "license": "",
   "engines": {
-    "node": "0.10.15"
+    "node": "0.10.15", 
+    "npm": ">= 1.4.0"
   }
 }
