--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5",
+    "sails-mongo": "^1.0.0",
     "async": "2.0.1",
     "mongodb": "2.2.25"
   },
