--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5",
     "sails-mongo": "^1.0.0",
+    "connect-mongo": "^2.0.0",
     "async": "2.0.1",
     "mongodb": "2.2.25"
   },
