--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@sailshq/connect-redis": "^3.2.1",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^5.2.0",
-    "firebase": "6.0.2",
-    "firebase-admin": "7.3.0",
+    "firebase": "^6.0.2",
+    "firebase-admin": "^7.3.0",
     "grunt": "^1.0.4",
     "sails": "^1.2.1",
     "sails-firestore": "^0.1.1",
